--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -196,7 +196,7 @@ $sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
   display: flex;
   h1{
     color: $primary-two;
-    // font-weight: lighter;
+    font-weight: bolder;
     margin: 10px;
     sup {
       
@@ -1685,7 +1685,7 @@ p.form-message.error.form-message.error {
 
 .footer-area h2{
   color: $primary-two;
-  // font-weight: lighter;
+  font-weight: bolder;
   margin-top: 1rem;
   sup {
     color: $primary-one;
