--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3455,7 +3455,7 @@ a:hover {
 
 .navbar-brand h1 {
   color: #EC4782;
-  font-weight: bolder;
+  font-weight: 800;
   margin: 10px;
 }
 
@@ -4859,7 +4859,7 @@ p.form-message.error.form-message.error {
 
 .footer-area h2 {
   color: #EC4782;
-  font-weight: bolder;
+  font-weight: 800;
   margin-top: 1rem;
 }
 
